# IntelligenceStatement

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: exceptions.py  main.py
backend/app/core/: config.py  database.py
backend/app/domain/entities/: statement.py
backend/app/domain/repositories/: base.py  statement.py
backend/app/domain/services/: file_export.py  ocr_analyzer.py
backend/app/infrastructure/controllers/file_export/: controller.py  depends.py
backend/app/infrastructure/controllers/ocr_analyzer/: controller.py  depends.py
backend/app/infrastructure/controllers/statement/: controller.py  depends.py
backend/app/infrastructure/dtos/: statement.py
backend/app/infrastructure/entities/: statement.py
backend/app/infrastructure/repositories/: statement.py
backend/app/infrastructure/services/: ocr_analyzer.py  statement.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: c3a3a6bfe83f_added_create_at_sa_column_param.py
backend/app/pdf_analysis/: dao.py  exceptions.py  models.py  router.py  service.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: d51637f285a7_added_statement_table.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.vue  main.ts  router.ts
frontend/src/api/: api.ts
frontend/src/components/: DocumentAnalysis.vue  DocumentList.vue  FileUpload.vue
frontend/src/views/: AnalysisView.vue  HomeView.vue
