[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ScrollDude"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
openai = "^1.70.0"
asyncpg = "^0.30.0"
sqlmodel = "^0.0.24"
alembic = "^1.15.2"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
ruff = "^0.11.2"
pydantic-settings = "^2.8.1"
pytz = "^2025.2"
pendulum = "^3.0.0"
httpx = "^0.28.1"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
